maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:11: error: Unmatched closing brace '}' ignored here
      }
      ^